[fix] post layout bugfixes

--- a/blog/assets/styles/_post_overrides.scss
+++ b/blog/assets/styles/_post_overrides.scss
@@ -2,8 +2,10 @@
   position: sticky;
   top: 0;
   background: white;
-  margin-top: 0%;
-  margin-bottom: 0%;
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+  max-width: 100%;
 }
 
 .prognroll-bar {
